# cookiecutter-python-minimal

./: Justfile  README.adoc  build_helper.py  cookiecutter.json  cookiecutter.toml  lefthook.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: Justfile  lefthook.yml  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
