[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.description}}"
authors = [
  { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = { text = "{{cookiecutter.license}}" }
# TODO: Classifiers?
readme = "README.md"
# Loaded by setuptools_scm
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_repo}}"
repository = "https://github.com/{{cookiecutter.github_repo}}"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
# NOTE: Using a version file avoids some overhead
#
# This file is explicitly ignored by version control.
write_to = "src/{{cookiecutter.project_slug}}/_version.py"
